tests/paczka1/small_fuzzy/94083800.err
Error in line 6: 5Ur S234 47,7
Error in line 1: A859 A859 99,1
